--- a/block-feed/Cargo.toml
+++ b/block-feed/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Sergei Shulepov <s.pepyakin@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+crate-type = ["lib", "bin"]
 
 [dependencies]
 jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", features = ["ws"] }
@@ -15,4 +16,5 @@ serde = "1.0.104"
 anyhow = "1.0.26"
 futures = "0.3.1"
 serde_json = "1.0.45"
-parity-scale-codec = "1.1.2"
+codec = { package = "parity-scale-codec", version = "1.1.2", features = ["derive"] }
+impl-serde = "0.3.0"
