--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ async-std = "1.4.0"
 futures = "0.3.1"
 jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", features = ["ws"] }
 sdl2 = "0.32.2"
+dotenv = "0.15.0"
