Add debug = true for release build to ease debugging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ futures = "0.3.1"
 jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", features = ["ws"] }
 sdl2 = "0.32.2"
 dotenv = "0.15.0"
+
+[profile.release]
+debug = true
