--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ codec = { package = "parity-scale-codec", version = "1.1.2", features = ["derive
 serde = "1.0.104"
 serde_json = "1.0.45"
 impl-serde = "0.3.0"
-async-std = "1.4.0"
+async-std = { version = "1.4.0", features = ["attributes"] }
 futures = "0.3.1"
 jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", features = ["ws"] }
 sdl2 = "0.32.2"
