--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ futures = "0.3.1"
 jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", features = ["ws"] }
 sdl2 = "0.32.2"
 dotenv = "0.15.0"
+atomic = "0.4.5"
 
 [profile.dev]
 panic = "abort"
