--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "remarkable-oxide"
+name = "remarkable-oxide-service"
 version = "0.1.0"
 authors = ["Sergei Shulepov <s.pepyakin@gmail.com>"]
 edition = "2018"
@@ -8,7 +8,6 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.26"
-env_logger = "0.7.1"
 log = "0.4.8"
 codec = { package = "parity-scale-codec", version = "1.1.2", features = ["derive"] }
 serde = "1.0.104"
@@ -17,17 +16,5 @@ impl-serde = "0.3.0"
 async-std = { version = "1.4.0", features = ["attributes"] }
 futures = "0.3.1"
 jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", features = ["ws"] }
-sdl2 = "0.32.2"
 dotenv = "0.15.0"
 atomic = "0.4.5"
-remarkable-oxide-service = { path = "service" }
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
-debug = true
-
-[workspace]
-members = ["service"]
